--- a/testimonials.html
+++ b/testimonials.html
@@ -180,7 +180,7 @@ If you have any comments, please do contact me.</br>
 "If anyone is looking for a fun, professional singing act, 'Andy B Goode' is the guy for you."</br>
 "it doesn't matter the age group as the type of songs 'Andy B Goode' sings, he gets everybody singing and dancing along. Highly recommended."
 </td>
-<td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0015-thumb.jpg" alt="Birthday Party"></a></td>
+<td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0016-thumb.jpg" alt="Birthday Party"></a></td>
 </tr>
  
 <tr>
@@ -217,7 +217,7 @@ If you have any comments, please do contact me.</br>
 "it was great, lot of familiar tunes which people enjoyed and danced to!"</br>
 "Very upbeat and familiar set, great for a party, and for getting people dancing!"
 </td>
-<td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0011-thumb.jpg" alt="Dosthill Vintage Summer Fayre"></a></td>
+<td><a href="photos.html"><img id="andybgoode" src="photos/thejays0006-thumb.jpg" alt="Andy B Goode and The Jays at Tamworth Bandstand"></a></td>
 </tr>
  
 </table>
