--- a/testimonials.html
+++ b/testimonials.html
@@ -165,7 +165,7 @@ If you have any comments, please do contact me.</br>
  
 <tr>
 <td>
-<h3>E. Cutler (Vintage Fayre)</h3>
+<h3>E. Cutler (Dosthill, Vintage Fayre)</h3>
 "Andy B Goode exceeded our expectations, so professional, an excellent act which was very good value for money."</br>
 "Having Andy B Goode at our vintage fair really set the scene and made the vintage context."</br>
 "It was lovely to see people of all ages stop, sit and listen, sing along or boogie on down."
@@ -175,7 +175,7 @@ If you have any comments, please do contact me.</br>
  
 <tr>
 <td>
-<h3>C. Kirkwood (Birthday Party)</h3>
+<h3>C. Kirkwood (Derby, Birthday Party)</h3>
 "Your act was first class, very professional, Having heard you before we knew you would do a great job and we weren't disappointed. Great value for a special evening."</br>
 "If anyone is looking for a fun, professional singing act, 'Andy B Goode' is the guy for you."</br>
 "it doesn't matter the age group as the type of songs 'Andy B Goode' sings, he gets everybody singing and dancing along. Highly recommended."
@@ -185,7 +185,7 @@ If you have any comments, please do contact me.</br>
  
 <tr>
 <td>
-<h3>L. Ward (Village Fair)</h3>
+<h3>L. Ward (Norton-Juxta-Twycross, Village Fair)</h3>
 "5/5…. act met my expectations, Andy B Goode was fantastic, great range of songs and always entertaining"</br>
 "very entertaining - great show to sit and watch from start to finish, but also worked well as background music for people that were wandering in and out of the refreshment area, at our village fair"</br>
 "The song selection was great and Andrew performance is suitable for a wide variety of events"
@@ -213,7 +213,7 @@ If you have any comments, please do contact me.</br>
  
 <tr>
 <td>
-<h3>S. Britton (Fete)</h3>
+<h3>S. Britton (Tamworth Bandstand)</h3>
 "it was great, lot of familiar tunes which people enjoyed and danced to!"</br>
 "Very upbeat and familiar set, great for a party, and for getting people dancing!"
 </td>
