--- a/testimonials.html
+++ b/testimonials.html
@@ -102,7 +102,9 @@ Roy Orbison: Ooby Dooby; Oh, Pretty Woman<br/>
 Fats Domino: I'm Walking<br/>
 Shakin' Stevens: Green Door; This Ole House<br/>
 The Platters: Harbour Lights
-</td></tr>
+</td>
+<td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></td>
+</tr>
 <table>
 
 <table>
@@ -114,7 +116,9 @@ Bobby Darin: Mack the Knife; Beyond the Sea; Things<br/>
 Dean Martin: Memories Are Made Of This, How D'Ya Like Your Eggs in the Morning<br/>
 Nat King Cole: L.O.V.E.<br/>
 Michael Bublé: You've Got A Friend In Me
-</td></tr>
+</td>
+<td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td> 
+</tr>
 <table>
 
 <table>
@@ -135,7 +139,9 @@ Chuck Berry: Run, Run, Rudolph<br/>
 Bobby Helms: Jingle Bell Rock<br/>
 Bobby Day: Rockin' Robin<br/>
 Shakin' Stevens: Merry Xmas Everyone
-</td></tr>
+</td>
+<td><a href="photos.html"><img id="andybgoode" src="photos/thejays0007-thumb.jpg" alt="Andy B Good at Xmas"></a></td> 
+</tr>
 <table>
 
 <br/>
