--- a/testimonials.html
+++ b/testimonials.html
@@ -78,8 +78,9 @@ Here are some of the songs that I can perform for you.</br>
 Snippets of many of these can be found in my <a href="music.html#videos">'Showreel'</a>.
 
 <table>
-<tr><td><h3>ROCK N ROLL / JIVE HITS</h3>
-</td></tr>
+<tr><td><h3>ROCK N ROLL / JIVE HITS</h3></td>
+<td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></td>
+</tr>
 <tr><td>Chuck Berry: <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>; Rock and Roll Music<br/>
 Bill Haley & His Comets: Rock Around the Clock; Shake, Rattle and Roll; See You Later Alligator<br/>
 Elvis: Blue Suede Shoes; Hound Dog; All Shook Up; Jailhouse Rock<br/>
@@ -103,11 +104,11 @@ Fats Domino: I'm Walking<br/>
 Shakin' Stevens: Green Door; This Ole House<br/>
 The Platters: Harbour Lights
 </td>
-<td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></td>
 </tr>
 
-<tr><td><h3>CROONER / SWING HITS</h3>
-</td></tr>
+<tr><td><h3>CROONER / SWING HITS</h3></td>
+<td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td>  
+</tr>
 <tr><td>
 Frank Sinatra: Fly Me To The Moon; Cheek To Cheek; Come Fly With Me; You Make Me Feel So Young<br/>
 Bobby Darin: Mack the Knife; Beyond the Sea; Things<br/>
@@ -115,11 +116,11 @@ Dean Martin: Memories Are Made Of This, How D'Ya Like Your Eggs in the Morning<b
 Nat King Cole: L.O.V.E.<br/>
 Michael Bublé: You've Got A Friend In Me
 </td>
-<td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td> 
 </tr>
 
-<tr><td><h3>XMAS CLASSICS</h3>
-</td></tr>
+<tr><td><h3>XMAS CLASSICS</h3></td>
+<td><a href="photos.html"><img id="andybgoode" src="photos/thejays0007-thumb.jpg" alt="Andy B Good at Xmas"></a></td> 
+</tr>
 <tr><td>
 Michael Bublé: Holly Jolly Christmas; Frosty The Snowman<br/>
 Michael Bublé and Puppini Sisters: Jingle Bells<br/>
@@ -136,7 +137,6 @@ Bobby Helms: Jingle Bell Rock<br/>
 Bobby Day: Rockin' Robin<br/>
 Shakin' Stevens: Merry Xmas Everyone
 </td>
-<td><a href="photos.html"><img id="andybgoode" src="photos/thejays0007-thumb.jpg" alt="Andy B Good at Xmas"></a></td> 
 </tr>
 <table>
 
