--- a/testimonials.html
+++ b/testimonials.html
@@ -77,35 +77,33 @@
 Here are some of the songs that I can perform for you.</br>
 Snippets of many of these can be found in my <a href="music.html#videos">'Showreel'</a>.
 
-<table>
-<tr><td><h3>ROCK N ROLL / JIVE HITS</h3></td>
-<td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></td>
-</tr>
-<tr><td>Chuck Berry: <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>; Rock and Roll Music<br/>
-Bill Haley & His Comets: Rock Around the Clock; Shake, Rattle and Roll; See You Later Alligator<br/>
+
+<h3>ROCK N ROLL / JIVE HITS</h3>
+<a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a>
+Chuck Berry: <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>; Rock and Roll Music<br/>
+Bill Haley and His Comets: Rock Around the Clock; Shake, Rattle and Roll; See You Later Alligator<br/>
 Elvis: Blue Suede Shoes; Hound Dog; All Shook Up; Jailhouse Rock<br/>
 Eddie Cochran: C'mon Everybody<br/>
 Danny and The Juniors: Rock And Roll Is Here To Stay, At the Hop<br/>
 The Everly Brothers: Wake up Little Susie; Bye, Bye Love<br/>
 Thurston Harris: Little Bitty Pretty One<br/>
 Jerry Lee Lewis: Great Balls of Fire<br/>
-Chubby Checker: Let’s Twist Again<br/>
+Chubby Checker: Let's Twist Again<br/>
 Buddy Holly: That'll Be the Day<br/>
 Richie Valens: La Bamba<br/>
 Frankie Lymon: Why Do Fools Fall in Love<br/>
 Dion and The Belmonts: <a href="https://youtu.be/xfGqHgRePIY">A Teenager in Love</a><br/>
 The Penguins: <a href="https://youtu.be/oRQt2_bjvMU">Earth Angel (Will You Be Mine)</a><br/>
-Little Anthony & The Imperials: Tears on my Pillow<br/>
+Little Anthony and The Imperials: Tears on my Pillow<br/>
 Johnny Tillotson: Poetry in Motion<br/>
 Cliff Richard: Living Doll, Move It<br/>
 Chris Montez: Let's Dance<br/>
 Roy Orbison: Ooby Dooby; Oh, Pretty Woman<br/>
 Fats Domino: I'm Walking<br/>
 Shakin' Stevens: Green Door; This Ole House<br/>
-The Platters: Harbour Lights
-</td>
-</tr>
+The Platters: Harbour Lights<br/>
 
+<table>
 <tr><td><h3>CROONER / SWING HITS</h3></td>
 <td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td>  
 </tr>
