--- a/testimonials.html
+++ b/testimonials.html
@@ -77,9 +77,10 @@
 Here are some of the songs that I can perform for you.</br>
 Snippets of many of these can be found in my <a href="music.html#videos">'Showreel'</a>.
 
-
-<h3>ROCK N ROLL / JIVE HITS</h3>
-<a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a>
+<TABLE>
+<TR><TD><h3>ROCK N ROLL / JIVE HITS</h3></TD><TD><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></TD></TR>
+</TABLE>
+<P>
 Chuck Berry: <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>; Rock and Roll Music<br/>
 Bill Haley and His Comets: Rock Around the Clock; Shake, Rattle and Roll; See You Later Alligator<br/>
 Elvis: Blue Suede Shoes; Hound Dog; All Shook Up; Jailhouse Rock<br/>
@@ -102,7 +103,8 @@ Roy Orbison: Ooby Dooby; Oh, Pretty Woman<br/>
 Fats Domino: I'm Walking<br/>
 Shakin' Stevens: Green Door; This Ole House<br/>
 The Platters: Harbour Lights<br/>
-
+</P>
+ 
 <table>
 <tr><td><h3>CROONER / SWING HITS</h3></td>
 <td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td>  
