--- a/testimonials.html
+++ b/testimonials.html
@@ -78,7 +78,7 @@ Here are some of the songs that I can perform for you.</br>
 Snippets of many of these can be found in my <a href="music.html#videos">'Showreel'</a>.
 
 <TABLE>
-<TR><TD><h3>ROCK N ROLL / JIVE HITS</h3></TD><TD><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></TD></TR>
+<TR><TD><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></TD><TD><h3>ROCK N ROLL / JIVE HITS</h3></TD></TR>
 </TABLE>
 <P>
 Chuck Berry: <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>; Rock and Roll Music<br/>
