--- a/testimonials.html
+++ b/testimonials.html
@@ -74,11 +74,14 @@
 <div name="songs" id="songs-area">
 <h2 id="songs" class="banner">Songs</h2>
 <div class="textbox-area">
+<P>
 Here are some of the songs that I can perform for you.</br>
 Snippets of many of these can be found in my <a href="music.html#videos">'Showreel'</a>.
+</P>
 
 <TABLE>
-<TR><TD><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></TD><TD><h3>ROCK N ROLL / JIVE HITS</h3></TD></TR>
+<TR><TD><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></TD>
+<TD><h3>ROCK N ROLL / JIVE HITS</h3></TD></TR>
 </TABLE>
 <P>
 Chuck Berry: <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>; Rock and Roll Music<br/>
@@ -105,23 +108,23 @@ Shakin' Stevens: Green Door; This Ole House<br/>
 The Platters: Harbour Lights<br/>
 </P>
  
-<table>
-<tr><td><h3>CROONER / SWING HITS</h3></td>
-<td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td>  
-</tr>
-<tr><td>
+<TABLE>
+<tr><td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td>
+<td><h3>CROONER / SWING HITS</h3></td></tr>
+</TABLE>
+<P>
 Frank Sinatra: Fly Me To The Moon; Cheek To Cheek; Come Fly With Me; You Make Me Feel So Young<br/>
 Bobby Darin: Mack the Knife; Beyond the Sea; Things<br/>
 Dean Martin: Memories Are Made Of This, How D'Ya Like Your Eggs in the Morning<br/>
 Nat King Cole: L.O.V.E.<br/>
-Michael Bublé: You've Got A Friend In Me
-</td>
-</tr>
+Michael Bublé: You've Got A Friend In Me<br/>
+</P>
 
-<tr><td><h3>XMAS CLASSICS</h3></td>
-<td><a href="photos.html"><img id="andybgoode" src="photos/thejays0007-thumb.jpg" alt="Andy B Good at Xmas"></a></td> 
-</tr>
-<tr><td>
+<TABLE>
+<tr><td><a href="photos.html"><img id="andybgoode" src="photos/thejays0007-thumb.jpg" alt="Andy B Good at Xmas"></a></td>
+<td><h3>XMAS CLASSICS</h3></td></tr>
+</TABLE>
+<P>
 Michael Bublé: Holly Jolly Christmas; Frosty The Snowman<br/>
 Michael Bublé and Puppini Sisters: Jingle Bells<br/>
 Perry Como: It’s Beginning To Look A Lot Like Christmas<br/>
@@ -135,12 +138,8 @@ Elvis: Blue Christmas, Lonely This Christmas<br/>
 Chuck Berry: Run, Run, Rudolph<br/>
 Bobby Helms: Jingle Bell Rock<br/>
 Bobby Day: Rockin' Robin<br/>
-Shakin' Stevens: Merry Xmas Everyone
-</td>
-</tr>
-<table>
-
-<br/>
+Shakin' Stevens: Merry Xmas Everyone<br/>
+</P>
 
 </div>
 </div>
