--- a/testimonials.html
+++ b/testimonials.html
@@ -75,7 +75,7 @@
 <h2 id="songs" class="banner">Songs</h2>
 <div class="textbox-area">
 <P>
-Here are some of the songs that I can perform for you.</br>
+Here are some of the songs that I can perform for you.<br/>
 Snippets of many of these can be found in my <a href="music.html#videos">'Showreel'</a>.
 </P>
 
@@ -83,7 +83,7 @@ Snippets of many of these can be found in my <a href="music.html#videos">'Showre
 <TR><TD><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></TD>
 <TD><h3>ROCK N ROLL / JIVE HITS</h3></TD></TR>
 </TABLE>
-<P>
+<BR/>
 Chuck Berry: <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>; Rock and Roll Music<br/>
 Bill Haley and His Comets: Rock Around the Clock; Shake, Rattle and Roll; See You Later Alligator<br/>
 Elvis: Blue Suede Shoes; Hound Dog; All Shook Up; Jailhouse Rock<br/>
@@ -106,19 +106,17 @@ Roy Orbison: Ooby Dooby; Oh, Pretty Woman<br/>
 Fats Domino: I'm Walking<br/>
 Shakin' Stevens: Green Door; This Ole House<br/>
 The Platters: Harbour Lights<br/>
-</P>
  
 <TABLE>
 <tr><td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td>
 <td><h3>CROONER / SWING HITS</h3></td></tr>
 </TABLE>
-<P>
+<BR/>
 Frank Sinatra: Fly Me To The Moon; Cheek To Cheek; Come Fly With Me; You Make Me Feel So Young<br/>
 Bobby Darin: Mack the Knife; Beyond the Sea; Things<br/>
 Dean Martin: Memories Are Made Of This, How D'Ya Like Your Eggs in the Morning<br/>
 Nat King Cole: L.O.V.E.<br/>
 Michael Bublé: You've Got A Friend In Me<br/>
-</P>
 
 <TABLE>
 <tr><td><a href="photos.html"><img id="andybgoode" src="photos/thejays0007-thumb.jpg" alt="Andy B Good at Xmas"></a></td>
@@ -149,15 +147,15 @@ Shakin' Stevens: Merry Xmas Everyone<br/>
 <h2 id="testimonials" class="banner">Testimonials</h2>
 <div class="textbox-area">
 Here are some of the things that people have said about "Andy B Goode" gigs.<br/>
-If you have any comments, please do contact me.</br>
+If you have any comments, please do contact me.<br/>
 
 <table>
  
 <tr>
 <td>
 <h3>J. Franklin (Fete)</h3>
-"My expectations were vastly exceeded!  Great quality voice and equipment made for a splendid performance."</br>
-"'Andy B Goode' is a splendid performer who gives consistently good performance across a wide range of singing styles."</br>
+"My expectations were vastly exceeded!  Great quality voice and equipment made for a splendid performance."<br/>
+"'Andy B Goode' is a splendid performer who gives consistently good performance across a wide range of singing styles."<br/>
 "'La Bamba' is especially good to hear. Perfect for weddings, christenings, birthdays etc.  Would highly recommend."
 </td>
 <td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0012-thumb.jpg" alt="Dosthill Vintage Summer Fayre"></a></td>
@@ -166,8 +164,8 @@ If you have any comments, please do contact me.</br>
 <tr>
 <td>
 <h3>E. Cutler (Dosthill, Vintage Fayre)</h3>
-"Andy B Goode exceeded our expectations, so professional, an excellent act which was very good value for money."</br>
-"Having Andy B Goode at our vintage fair really set the scene and made the vintage context."</br>
+"Andy B Goode exceeded our expectations, so professional, an excellent act which was very good value for money."<br/>
+"Having Andy B Goode at our vintage fair really set the scene and made the vintage context."<br/>
 "It was lovely to see people of all ages stop, sit and listen, sing along or boogie on down."
 </td>
 <td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0011-thumb.jpg" alt="Dosthill Vintage Summer Fayre"></a></td>
@@ -176,8 +174,8 @@ If you have any comments, please do contact me.</br>
 <tr>
 <td>
 <h3>C. Kirkwood (Derby, Birthday Party)</h3>
-"Your act was first class, very professional, Having heard you before we knew you would do a great job and we weren't disappointed. Great value for a special evening."</br>
-"If anyone is looking for a fun, professional singing act, 'Andy B Goode' is the guy for you."</br>
+"Your act was first class, very professional, Having heard you before we knew you would do a great job and we weren't disappointed. Great value for a special evening."<br/>
+"If anyone is looking for a fun, professional singing act, 'Andy B Goode' is the guy for you."<br/>
 "it doesn't matter the age group as the type of songs 'Andy B Goode' sings, he gets everybody singing and dancing along. Highly recommended."
 </td>
 <td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0016-thumb.jpg" alt="Birthday Party"></a></td>
@@ -186,8 +184,8 @@ If you have any comments, please do contact me.</br>
 <tr>
 <td>
 <h3>L. Ward (Norton-Juxta-Twycross, Village Fair)</h3>
-"5/5…. act met my expectations, Andy B Goode was fantastic, great range of songs and always entertaining"</br>
-"very entertaining - great show to sit and watch from start to finish, but also worked well as background music for people that were wandering in and out of the refreshment area, at our village fair"</br>
+"5/5…. act met my expectations, Andy B Goode was fantastic, great range of songs and always entertaining"<br/>
+"very entertaining - great show to sit and watch from start to finish, but also worked well as background music for people that were wandering in and out of the refreshment area, at our village fair"<br/>
 "The song selection was great and Andrew performance is suitable for a wide variety of events"
 </td>
 <td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0017-thumb.jpg" alt="Village Fair"></a></td>
@@ -196,7 +194,7 @@ If you have any comments, please do contact me.</br>
 <tr>
 <td>
 <h3>E. Jones (Birthday Party)</h3>
-"Totally! Fab evening completely brought to life with the excellent entertainment!"</br>
+"Totally! Fab evening completely brought to life with the excellent entertainment!"<br/>
 "Everyone commented about the great atmosphere with your music.  A great party atmosphere and very pro! Loved it!"
 </td>
 <td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0005-thumb.jpg" alt="Birthday Party"></a></td>
@@ -205,7 +203,7 @@ If you have any comments, please do contact me.</br>
 <tr>
 <td>
 <h3>P. Reed (Birthday Party)</h3>
-"The act was very good and met the expectations of the audience"</br>
+"The act was very good and met the expectations of the audience"<br/>
 "Great evening - people singing along with some rock classics and a great party atmosphere"
 </td>
 <td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0015-thumb.jpg" alt="Birthday Party"></a></td>
@@ -214,7 +212,7 @@ If you have any comments, please do contact me.</br>
 <tr>
 <td>
 <h3>S. Britton (Tamworth Bandstand)</h3>
-"it was great, lot of familiar tunes which people enjoyed and danced to!"</br>
+"it was great, lot of familiar tunes which people enjoyed and danced to!"<br/>
 "Very upbeat and familiar set, great for a party, and for getting people dancing!"
 </td>
 <td><a href="photos.html"><img id="andybgoode" src="photos/thejays0006-thumb.jpg" alt="Andy B Goode and The Jays at Tamworth Bandstand"></a></td>
@@ -240,7 +238,7 @@ If you have any comments, please do contact me.</br>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.0.12</li>
+<li>website: v2.0.13</li>
 </ul>
 </div>
 </div>
