--- a/testimonials.html
+++ b/testimonials.html
@@ -35,6 +35,16 @@
 <meta name="theme-color" content="#ffffff">
 <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
+<STYLE>
+ 
+.para1 {
+ width: 400px;
+ height: 400px;
+ background-color: #DDFFFF;
+ }
+ 
+</STYLE>
+ 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -122,7 +132,7 @@ Michael Bublé: You've Got A Friend In Me<br/>
 <tr><td><a href="photos.html"><img id="andybgoode" src="photos/thejays0007-thumb.jpg" alt="Andy B Good at Xmas"></a></td>
 <td><h3>XMAS CLASSICS</h3></td></tr>
 </TABLE>
-<BR/>
+<P class='para1'>
 Michael Bublé: Holly Jolly Christmas; Frosty The Snowman<br/>
 Michael Bublé and Puppini Sisters: Jingle Bells<br/>
 Perry Como: It’s Beginning To Look A Lot Like Christmas<br/>
@@ -137,7 +147,7 @@ Chuck Berry: Run, Run, Rudolph<br/>
 Bobby Helms: Jingle Bell Rock<br/>
 Bobby Day: Rockin' Robin<br/>
 Shakin' Stevens: Merry Xmas Everyone<br/>
-
+</P>
 </div>
 </div>
 
