--- a/testimonials.html
+++ b/testimonials.html
@@ -39,8 +39,8 @@
  
 .para1 {
  width: 800px;
- height: 400px;
- background-color: #DDFFFF;
+ height: 300px;
+ background-color: #EEFFFF;
  }
  
 </STYLE>
