--- a/testimonials.html
+++ b/testimonials.html
@@ -39,8 +39,18 @@
  
 .para1 {
  width: 800px;
- height: 300px;
- background-color: #EEFFFF;
+ height: 320px;
+ background-color: #DDFFFF;
+ }
+ .para2 {
+ width: 800px;
+ height: 320px;
+ background-color: #DDFFFF;
+ }
+ .para3 {
+ width: 800px;
+ height: 320px;
+ background-color: #DDFFFF;
  }
  
 </STYLE>
@@ -93,7 +103,7 @@ Snippets of many of these can be found in my <a href="music.html#videos">'Showre
 <TR><TD><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></TD>
 <TD><h3>ROCK N ROLL / JIVE HITS</h3></TD></TR>
 </TABLE>
-<BR/>
+<P class='para1'>
 Chuck Berry: <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>; Rock and Roll Music<br/>
 Bill Haley and His Comets: Rock Around the Clock; Shake, Rattle and Roll; See You Later Alligator<br/>
 Elvis: Blue Suede Shoes; Hound Dog; All Shook Up; Jailhouse Rock<br/>
@@ -116,23 +126,25 @@ Roy Orbison: Ooby Dooby; Oh, Pretty Woman<br/>
 Fats Domino: I'm Walking<br/>
 Shakin' Stevens: Green Door; This Ole House<br/>
 The Platters: Harbour Lights<br/>
+ </P>
  
 <TABLE>
 <tr><td><a href="photos.html"><img id="andybgoode" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td>
 <td><h3>CROONER / SWING HITS</h3></td></tr>
 </TABLE>
-<BR/>
+<P class='para2'>
 Frank Sinatra: Fly Me To The Moon; Cheek To Cheek; Come Fly With Me; You Make Me Feel So Young<br/>
 Bobby Darin: Mack the Knife; Beyond the Sea; Things<br/>
 Dean Martin: Memories Are Made Of This, How D'Ya Like Your Eggs in the Morning<br/>
 Nat King Cole: L.O.V.E.<br/>
 Michael Bublé: You've Got A Friend In Me<br/>
+ </P>
 
 <TABLE>
 <tr><td><a href="photos.html"><img id="andybgoode" src="photos/thejays0007-thumb.jpg" alt="Andy B Good at Xmas"></a></td>
 <td><h3>XMAS CLASSICS</h3></td></tr>
 </TABLE>
-<P class='para1'>
+<P class='para3'>
 Michael Bublé: Holly Jolly Christmas; Frosty The Snowman<br/>
 Michael Bublé and Puppini Sisters: Jingle Bells<br/>
 Perry Como: It’s Beginning To Look A Lot Like Christmas<br/>
