--- a/testimonials.html
+++ b/testimonials.html
@@ -34,9 +34,10 @@
 <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-
 <STYLE>
-.para1 {
+/*
+ THIS KIND OF SIZING SOLVES THE ANDROID FONT BOOSTING...BUT ALL TEXT AREAS MUST BE SIZED.
+ .para1 {
   width: 800px;
   height: 500px; 
 }
@@ -48,6 +49,7 @@
   width: 800px;
   height: 320px;
 }
+*/
 </STYLE>
  
 <script>
