--- a/testimonials.html
+++ b/testimonials.html
@@ -35,8 +35,8 @@
 <meta name="theme-color" content="#ffffff">
 <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 <STYLE>
-  max-height: 1000000em; /* Chrome for Android */
-  -moz-text-size-adjust: none; /* Firefox Mobile */
+  /*max-height: 1000000em;  Chrome for Android */
+  /*-moz-text-size-adjust: none;  Firefox Mobile */
 /*
  THIS KIND OF SIZING SOLVES THE ANDROID FONT BOOSTING...BUT ALL TEXT AREAS MUST BE SIZED.
  .para1 {
