--- a/testimonials.html
+++ b/testimonials.html
@@ -77,18 +77,24 @@
 <a href="testimonials.html#testimonials">Testimonials</a>
 <a href="#contact">Contact</a>
 </div>
-<br/>
 
 
 <div id="main">
 
 
-
-<div id="info-area"><div class="textbox-area">
+<div id="info-area">
+<div class="textbox-area">
+<table>
+<tr>
+<td>
 <h3>On this page you will find <a href="#songs">Songs</a> and <a href="#testimonials">Testimonials</a>.</h3>
-</div></div>
-
-
+</td>
+<td><img id="andybgoode" src="images/andybgoode.png" alt="Andy B Goode Headshot"></td>
+</tr>
+</table>
+</div>
+</div> 
+ 
 
 <div name="songs" id="songs-area">
 <h2 id="songs" class="banner">Songs</h2>
