--- a/songlist.html
+++ b/songlist.html
@@ -5,16 +5,16 @@
  All rights reserved
  -->
 <head>
-<title>Andy B Goode - Testimonials - Vintage Rock n Roll Singer, Staffordshire, UK</title>
+<title>Andy B Goode - Songs List - Vintage Rock n Roll Singer, Staffordshire, UK</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <meta http-equiv="Cache-Control" content="no-cache" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<meta name="short" content="AndyBGoode 1950s/60 Rock and Roll Entertainer - Testimonials"/>
+<meta name="short" content="AndyBGoode 1950s/60 Rock and Roll Entertainer - Song List"/>
 <meta name="description" content="Andy B Goode 1950s/1960s Rock n Roll Singer based in Tamworth, Staffordshire, England">
 <meta name="author" content="Andrew Britton">
 <meta charset="UTF-8">
-<meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1950s,1960s,Rock n Roll,Rock and Roll,Entertainment,Vintage,Songs">
+<meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1950s,1960s,Rock n Roll,Rock and Roll,Entertainment,Vintage,Song list">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -66,6 +66,8 @@
 }
 */
 
+
+
 </STYLE>
  
 <script>
@@ -98,84 +100,82 @@
 
 
 
-
-<div name="testimonials"  id="testimonials-area">
-<h2 id="testimonials" class="banner">Testimonials</h2>
+<div name="songs" id="songs-area">
+<h2 id="songs" class="banner">Songs</h2>
 <div class="textbox-area">
-Here are some of the things that people have said about "Andy B Goode" gigs.<br/>
-If you have any comments, please do contact me.<br/>
 
-<table>
- 
-<tr>
-<td>
-<h3>J. Franklin (Fete)</h3>
-"My expectations were vastly exceeded!  Great quality voice and equipment made for a splendid performance."<br/>
-"'Andy B Goode' is a splendid performer who gives consistently good performance across a wide range of singing styles."<br/>
-"'La Bamba' is especially good to hear. Perfect for weddings, christenings, birthdays etc.  Would highly recommend."
-</td>
-<td><a href="photos.html"><img src="photos/andybgoode0012-thumb.jpg" alt="Dosthill Vintage Summer Fayre"></a></td>
-</tr>
- 
-<tr>
-<td>
-<h3>E. Cutler (Dosthill, Vintage Fayre)</h3>
-"Andy B Goode exceeded our expectations, so professional, an excellent act which was very good value for money."<br/>
-"Having Andy B Goode at our vintage fair really set the scene and made the vintage context."<br/>
-"It was lovely to see people of all ages stop, sit and listen, sing along or boogie on down."
-</td>
-<td><a href="photos.html"><img src="photos/andybgoode0011-thumb.jpg" alt="Dosthill Vintage Summer Fayre"></a></td>
-</tr>
- 
-<tr>
-<td>
-<h3>C. Kirkwood (Derby, Birthday Party)</h3>
-"Your act was first class, very professional, Having heard you before we knew you would do a great job and we weren't disappointed. Great value for a special evening."<br/>
-"If anyone is looking for a fun, professional singing act, 'Andy B Goode' is the guy for you."<br/>
-"it doesn't matter the age group as the type of songs 'Andy B Goode' sings, he gets everybody singing and dancing along. Highly recommended."
-</td>
-<td><a href="photos.html"><img src="photos/andybgoode0016-thumb.jpg" alt="Birthday Party"></a></td>
-</tr>
- 
-<tr>
-<td>
-<h3>L. Ward (Norton-Juxta-Twycross, Village Fair)</h3>
-"5/5…. act met my expectations, Andy B Goode was fantastic, great range of songs and always entertaining"<br/>
-"very entertaining - great show to sit and watch from start to finish, but also worked well as background music for people that were wandering in and out of the refreshment area, at our village fair"<br/>
-"The song selection was great and Andrew performance is suitable for a wide variety of events"
-</td>
-<td><a href="photos.html"><img src="photos/andybgoode0017-thumb.jpg" alt="Village Fair"></a></td>
-</tr>
- 
-<tr>
-<td>
-<h3>E. Jones (Birthday Party)</h3>
-"Totally! Fab evening completely brought to life with the excellent entertainment!"<br/>
-"Everyone commented about the great atmosphere with your music.  A great party atmosphere and very pro! Loved it!"
-</td>
-<td><a href="photos.html"><img src="photos/andybgoode0005-thumb.jpg" alt="Birthday Party"></a></td>
-</tr>
- 
-<tr>
-<td>
-<h3>P. Reed (Birthday Party)</h3>
-"The act was very good and met the expectations of the audience"<br/>
-"Great evening - people singing along with some rock classics and a great party atmosphere"
-</td>
-<td><a href="photos.html"><img src="photos/andybgoode0015-thumb.jpg" alt="Birthday Party"></a></td>
-</tr>
- 
-<tr>
-<td>
-<h3>S. Britton (Tamworth Bandstand)</h3>
-"it was great, lot of familiar tunes which people enjoyed and danced to!"<br/>
-"Very upbeat and familiar set, great for a party, and for getting people dancing!"
-</td>
-<td><a href="photos.html"><img src="photos/thejays0006-thumb.jpg" alt="Andy B Goode and The Jays at Tamworth Bandstand"></a></td>
-</tr>
- 
-</table>
+<P class='songlistHeadingArea'>
+Here are some of the songs that I can perform for you.<br/>
+Snippets of many of these can be found in my <a href="music.html#videos">'Showreel'</a>.
+</P>
 
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImage" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></TD>
+<TD><DIV class="boxHeading">ROCK N ROLL / JIVE HITS</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Chuck Berry: <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>; Rock and Roll Music<br/>
+Bill Haley and His Comets: Rock Around the Clock; Shake, Rattle and Roll; See You Later Alligator<br/>
+Elvis: Blue Suede Shoes; Hound Dog; All Shook Up; Jailhouse Rock<br/>
+Eddie Cochran: C'mon Everybody<br/>
+Danny and The Juniors: Rock And Roll Is Here To Stay, At the Hop<br/>
+The Everly Brothers: Wake up Little Susie; Bye, Bye Love<br/>
+Thurston Harris: Little Bitty Pretty One<br/>
+Jerry Lee Lewis: Great Balls of Fire<br/>
+Chubby Checker: Let's Twist Again<br/>
+Buddy Holly: That'll Be the Day<br/>
+Richie Valens: La Bamba<br/>
+Frankie Lymon: Why Do Fools Fall in Love<br/>
+Dion and The Belmonts: <a href="https://youtu.be/xfGqHgRePIY">A Teenager in Love</a><br/>
+The Penguins: <a href="https://youtu.be/oRQt2_bjvMU">Earth Angel (Will You Be Mine)</a><br/>
+Little Anthony and The Imperials: Tears on my Pillow<br/>
+Johnny Tillotson: Poetry in Motion<br/>
+Cliff Richard: Living Doll, Move It<br/>
+Chris Montez: Let's Dance<br/>
+Roy Orbison: Ooby Dooby; Oh, Pretty Woman<br/>
+Fats Domino: I'm Walking<br/>
+Shakin' Stevens: Green Door; This Ole House<br/>
+The Platters: Harbour Lights<br/>
+</P>
+</DIV>
+ 
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<tr><td><a href="photos.html"><img class="boxImage" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td>
+<td><DIV class="boxHeading">CROONER / SWING HITS</DIV></td></tr>
+</TABLE>
+<P class='boxInfoArea'>
+Frank Sinatra: Fly Me To The Moon; Cheek To Cheek; Come Fly With Me; You Make Me Feel So Young<br/>
+Bobby Darin: Mack the Knife; Beyond the Sea; Things<br/>
+Dean Martin: Memories Are Made Of This, How D'Ya Like Your Eggs in the Morning<br/>
+Nat King Cole: L.O.V.E.<br/>
+Michael Bublé: You've Got A Friend In Me<br/>
+</P>
+</DIV>
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<tr><td><a href="photos.html"><img class="boxImage" src="photos/thejays0007-thumb.jpg" alt="Andy B Good at Xmas"></a></td>
+<td><DIV class="boxHeading">XMAS CLASSICS</DIV></td></tr>
+</TABLE>
+<P class='boxInfoArea'>
+Michael Bublé: Holly Jolly Christmas; Frosty The Snowman<br/>
+Michael Bublé and Puppini Sisters: Jingle Bells<br/>
+Perry Como: It’s Beginning To Look A Lot Like Christmas<br/>
+Dean Martin: Let it Snow, Let it Snow, Let it Snow<br/>
+Bing Crosby: Santa Claus is Comin’ to Town; White Christmas<br/>
+Frank Sinatra: I’ll Be Home for Christmas, Rudolph the Red-Nosed Reindeer<br/>
+Dickie Valentine: Christmas Alphabet<br/>
+Nat King Cole: The Chrismas Song<br/>
+Tony Bennett: Sleigh Ride<br/>
+Elvis: Blue Christmas, Lonely This Christmas<br/>
+Chuck Berry: Run, Run, Rudolph<br/>
+Bobby Helms: Jingle Bell Rock<br/>
+Bobby Day: Rockin' Robin<br/>
+Shakin' Stevens: Merry Xmas Everyone<br/>
+</P>
+</DIV>
 
 </div>
 </div>
