corrected songlist into

--- a/songlist.html
+++ b/songlist.html
@@ -104,10 +104,18 @@
 <h2 id="songs" class="banner">Songs</h2>
 <div class="textbox-area">
 
-<P class='songlistHeadingArea'>
-Here are some of the songs that I can perform for you.<br/>
-Snippets of many of these can be found in my <a href="music.html#videos">'Showreel'</a>.
-</P>
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD>Here's some of my songs that I perform.</TD></TR>
+</TABLE>
+</DIV>
+
+<DIV class="boxPanelBlock">
+<TABLE class='boxHeadingArea'>
+<TR><TD>Snippets of many of these can be found in my <a href="music.html#videos">'Showreel'</a>, do go and have a listen.</TD></TR>
+</TABLE>
+</DIV>
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
