--- a/songlist.html
+++ b/songlist.html
@@ -192,8 +192,8 @@ Shakin' Stevens: Merry Xmas Everyone<br/>
 
 
 
-<div name="contact" id="contact-area">
-<h2 id="contact" class="banner">Contact me</h2>
+<div id="contact" class="contact-area">
+<h2 class="banner">Contact me</h2>
 <div class="textbox-area">
 <ul>
 <li>Phone: 07979 536591</li>
