--- a/songlist.html
+++ b/songlist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xml:lang="en">
 <!--
  Copyright (C) 2016 Andrew Britton.
  All rights reserved
@@ -40,34 +40,6 @@
   /*max-height: 1000000em;  Chrome for Android */
   /*-moz-text-size-adjust: none;  Firefox Mobile */
 
-/*
-.boxPanel {
-	max-width: 400px;
-	margin: 5px;
-	display: inline-block;
-	vertical-align: top;
-	border: 1px solid #000000;
-	border-collapse: collapse;
-}
-.boxHeading {
-	font-size: 15px;
-	font-weight: bold;
-}
-.boxHeadingArea {
-	width:100%;
-	padding: 5px;
-}
-.boxInfoArea {
-	padding: 5px;
-}
-.boxImage {
-	width:150px;
-	height:auto;
-}
-*/
-
-
-
 </STYLE>
  
 <script>
@@ -100,8 +72,8 @@
 
 
 
-<div name="songs" id="songs-area">
-<h2 id="songs" class="banner">Songs</h2>
+<div id="songs" class="songs-area">
+<h2 class="banner">Songs</h2>
 <div class="textbox-area">
 
 
