--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <!--
  Copyright (C) 2016 Andrew Brittons.
  All rights reserved
@@ -66,8 +66,8 @@
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a>
 <a href="music.html#videos">Videos</a>
-<a href="testimonials.html">Songs</a>
-<a href="testimonials.html#testimonials">Testimonials</a>
+<a href="songlist.html">Songs</a>
+<a href="testimonials.html">Testimonials</a>
 <a href="#contact">Contact</a>
 </div>
 <br/>
@@ -139,8 +139,8 @@ So prepare yourself for beautiful 1940s Vintage Harmonies, Energetic 1950s Rock 
 </div>
 </div>
 
-<div name="contact" id="contact-area">
-<h2 id="contact" class="banner">Contact me</h2>
+<div id="contact" class="contact-area">
+<h2 class="banner">Contact me</h2>
 <div class="textbox-area">
 <ul>
 <li>Phone: 07979 536591</li>
@@ -149,7 +149,7 @@ So prepare yourself for beautiful 1940s Vintage Harmonies, Energetic 1950s Rock 
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.0.12</li>
+<li>website: v2.1.0</li>
 </ul>
 </div>
 </div>
