--- a/music.html
+++ b/music.html
@@ -54,8 +54,8 @@
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a>
 <a href="music.html#videos">Videos</a>
-<a href="testimonials.html">Songs</a>
-<a href="testimonials.html#testimonials">Testimonials</a>
+<a href="songlist.html">Songs</a>
+<a href="testimonials.html">Testimonials</a>
 <a href="#contact">Contact</a>
 </div>
 <br/>
@@ -124,8 +124,8 @@ Again a song from 'Back to the Future'. This time it's a slow love song.</br>
 
 
 
-<div name="contact" id="contact-area">
-<h2 id="contact" class="banner">Contact me</h2>
+<div id="contact" class="contact-area">
+<h2 class="banner">Contact me</h2>
 <div class="textbox-area">
 <ul>
 <li>Phone: 07979 536591</li>
@@ -134,7 +134,7 @@ Again a song from 'Back to the Future'. This time it's a slow love song.</br>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.0.12</li>
+<li>website: v2.1.0</li>
 </ul>
 </div>
 </div>
