--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 <div class="textbox-area">
 <ul>
 <li>
-Sunday 25th September 2016 - 11:30am, 1pm and 2:30pm</br>
-<a href="http://www.foodgusto.com/tamworth-festival/">Food Gusto Fayre</a> (Tamworth Castle, Pleasure Grounds)</br>
-A Food Festival in Tamworth. 'Andy B Goode' will be performing with '<a href="https://www.facebook.com/TheJaysVintage">The Jays Vocal Vintage Tribute Group</a>' multiple times (11:30am, 1pm and 2:30pm) during the day.</br>
+Sunday 25th September 2016 - 11:30am, 1pm and 2:30pm<br/>
+<a href="http://www.foodgusto.com/tamworth-festival/">Food Gusto Fayre</a> (Tamworth Castle, Pleasure Grounds)<br/>
+A Food Festival in Tamworth. 'Andy B Goode' will be performing with '<a href="https://www.facebook.com/TheJaysVintage">The Jays Vocal Vintage Tribute Group</a>' multiple times (11:30am, 1pm and 2:30pm) during the day.<br/>
 So prepare yourself for beautiful 1940s Vintage Harmonies, Energetic 1950s Rock n Roll and tasty food...It's gonna be great.
 </li>
 </ul>
