--- a/music.html
+++ b/music.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <!--
  Copyright (C) 2016 Andrew Brittons.
  All rights reserved
@@ -98,23 +98,23 @@ Here are two of my demo tracks: 'Johnny B. Goode' and 'Earth Angel'.
 
 <h3>'Andy B Goode' Showreel Summer 2016</h3>
 This contains snippets from loads of songs, all recorded live at St Pauls Church Dosthill Summer Vintage Fete.<br/>
-You could play 'name that tune' while you listen.</br>
+You could play 'name that tune' while you listen.<br/>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/f4x4ei3muL8" frameborder="0" allowfullscreen></iframe>
 <br/>
 
 <h3>'Teenager in Love'</h3>
-This was recorded at the Dosthill Summer Vintage Fayre. I also performed this song on on TCR FM at the 'Norton Juxta Twycross Summer Fete.</br>
-It's great to hear people joining in at the chorus.</br>
+This was recorded at the Dosthill Summer Vintage Fayre. I also performed this song on on TCR FM at the 'Norton Juxta Twycross Summer Fete.<br/>
+It's great to hear people joining in at the chorus.<br/>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xfGqHgRePIY" frameborder="0" allowfullscreen></iframe>
 <br/>
 
 <h3>'Johnny B. Goode' originally by the fantastic Chuck Berry (Audio only)</h3>
-'Back to the Future' is one of my favourite movies, and this track really adds energy to the film.</br>
+'Back to the Future' is one of my favourite movies, and this track really adds energy to the film.<br/>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9E8LMdoa5co" frameborder="0" allowfullscreen></iframe>
 <br/>
 
 <h3>'Earth Angel' from Back To The Future (Audio only)</h3>
-Again a song from 'Back to the Future'. This time it's a slow love song.</br>
+Again a song from 'Back to the Future'. This time it's a slow love song.<br/>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/oRQt2_bjvMU" frameborder="0" allowfullscreen></iframe>
 <br/>
 
