--- a/testimonials.html
+++ b/testimonials.html
@@ -186,8 +186,8 @@ If you have any comments, please do contact me.<br/>
 
 
 
-<div name="contact" id="contact-area">
-<h2 id="contact" class="banner">Contact me</h2>
+<div id="contact" class="contact-area">
+<h2 class="banner">Contact me</h2>
 <div class="textbox-area">
 <ul>
 <li>Phone: 07979 536591</li>
