--- a/testimonials.html
+++ b/testimonials.html
@@ -101,8 +101,8 @@
 
 
 
-<div name="testimonials"  id="testimonials-area">
-<h2 id="testimonials" class="banner">Testimonials</h2>
+<div id="testimonials">
+<h2 class="banner">Testimonials</h2>
 <div class="textbox-area">
 Here are some of the things that people have said about "Andy B Goode" gigs.<br/>
 If you have any comments, please do contact me.<br/>
