News Page Added

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
 <div class="menu">
 <a href="index.html">Home</a>
+<a href="news.html">News</a>
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a>
 <a href="music.html#videos">Videos</a>
@@ -102,42 +103,25 @@
 <li>Fun 'Teddy boy' style outfit</li>
 <li>PA Provided for most events</li>
 <li>Current Public Liability Insurance</li>
-<li>Heres a list of <a href="testimonials.html#songs">Songs</a> that I perform and some <a href="testimonials.html#testimonials">Testimonials</a></li>
 </ul>
 </div>
 </div>
 
-<div id="news-area">
-<h2 id="news" class="banner">News</h2>
-<div class="textbox-area">
-<ul>
-<li>Snippets of many of my songs can be seen in my <a href="music.html#videos">'Summer Showreel 2016'</a>, which was recorded live at St Pauls Church Dosthill Summer Vintage Fete.</li>
-<li>Exciting news.... My first two demo tracks 'Johnny B. Goode' and 'Earth Angel' are now available as free mp3 downloads or listen on Listen on YouTube: <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>,  <a href="https://youtu.be/oRQt2_bjvMU">Earth Angel</a></li>
-<li><a href="/media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img alt="Johnny B Goode" src="images/demojohnnybgoodeart.jpg" width="120" height="120"></a> <a href="/media/002_-_AndyBGoode_-_Earth_Angel.mp3" download><img alt="Earth Angel" src="images/demoearthangelart.jpg" width="120" height="120"></a></li>
-<li>Special Offer: Discounted gig pricing is currently available for 2016.</li>
-<li>Free Gigs: This year I am giving a few free gigs to worthy causes (Hospices, Charities, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
-<li>Xmas Party: I currently have space for Christmas gigs....so book early if you want your party to Bop.</li>
-<li>Warwickshire and Antique Fayre (July): This was a great local vintage fayre in Poleworth. Loads of stalls with Dresses and other collectables. I sang for a couple of hours to add a retro touch.</li>
-<li>Norton Juxta Twycross Summer Village Fete (June): This included: Live music from Andy B Goode (beside the swimming pool), barbecue, cream teas, coconut shy, skittles competition, vintage steam engine, delicious home made ice cream, stalls and the annual dog show.
-  <BR/>I got to perform "Teenager in Love" live on the top local radio station TCR FM (<a href="http://www.tcrfm.co.uk">www.tcrfm.co.uk</a>).</li>
-<li>Birthday Parties: I have done a few birthday parties over the summer, which were great fun. People danced the night away. Some even sang along.</li>
-</ul>
-</div>
-</div>
 
-<div id="gigs-area">
-<h2 id="gigs" class="banner">Key public gigs</h2>
+<div id="highlights-area">
+<h2 id="highlights" class="banner">Highlights</h2>
 <div class="textbox-area">
 <ul>
 <li>
-Sunday 25th September 2016 - 11:30am, 1pm and 2:30pm<br/>
-<a href="http://www.foodgusto.com/tamworth-festival/">Food Gusto Fayre</a> (Tamworth Castle, Pleasure Grounds)<br/>
-A Food Festival in Tamworth. 'Andy B Goode' will be performing with '<a href="https://www.facebook.com/TheJaysVintage">The Jays Vocal Vintage Tribute Group</a>' multiple times (11:30am, 1pm and 2:30pm) during the day.<br/>
-So prepare yourself for beautiful 1940s Vintage Harmonies, Energetic 1950s Rock n Roll and tasty food...It's gonna be great.
+Saturday 15th October 2016 - 11am<br/>
+<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a> (Outside the 'Curly Magpie' vintage shop)<br/>
+A Food Festival in Swadlincote. 'Andy B Goode' will be performing at 11am.<br/>
+Prepare yourself for Energetic 1950s Rock n Roll and tasty food from all over the world. It's gonna be great.
 </li>
 </ul>
 </div>
 </div>
+
 
 <div id="contact" class="contact-area">
 <h2 class="banner">Contact me</h2>
