--- a/photos.html
+++ b/photos.html
@@ -466,6 +466,7 @@ function isPublishedNow(pubValue) {
 
 <div class="menu">
 <a href="index.html">Home</a>
+<a href="news.html">News</a>
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a>
 <a href="music.html#videos">Videos</a>
