--- a/songlist.html
+++ b/songlist.html
@@ -16,10 +16,6 @@
 <meta charset="UTF-8">
 <meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1950s,1960s,Rock n Roll,Rock and Roll,Entertainment,Vintage,Song list">
 
-<!--
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
--->
-
 <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
@@ -39,8 +35,10 @@
 <meta name="theme-color" content="#ffffff">
 <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 <STYLE>
-  /*max-height: 1000000em;  Chrome for Android */
-  /*-moz-text-size-adjust: none;  Firefox Mobile */
+
+
+
+
 
 </STYLE>
  
@@ -60,6 +58,7 @@
 
 <div class="menu">
 <a href="index.html">Home</a>
+<a href="news.html">News</a>
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a>
 <a href="music.html#videos">Videos</a>
@@ -78,17 +77,17 @@
 <h2 class="banner">Songs</h2>
 <div class="textbox-area">
 
-
-<DIV class="boxPanel">
+<DIV class="infoBlock">
+<DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
 <TR><TD>Here's some of my songs that I perform.</TD></TR>
 </TABLE>
 </DIV>
-
-<DIV class="boxPanelBlock">
+<DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
 <TR><TD>Snippets of many of these can be found in my <a href="music.html#videos">'Showreel'</a>, do go and have a listen.</TD></TR>
 </TABLE>
+</DIV>
 </DIV>
 
 <DIV class="boxPanel">
@@ -121,20 +120,7 @@ Shakin' Stevens: Green Door; This Ole House<br/>
 The Platters: Harbour Lights<br/>
 </P>
 </DIV>
- 
-<DIV class="boxPanel">
-<TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImage" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td>
-<td><DIV class="boxHeading">CROONER / SWING HITS</DIV></td></tr>
-</TABLE>
-<P class='boxInfoArea'>
-Frank Sinatra: Fly Me To The Moon; Cheek To Cheek; Come Fly With Me; You Make Me Feel So Young<br/>
-Bobby Darin: Mack the Knife; Beyond the Sea; Things<br/>
-Dean Martin: Memories Are Made Of This, How D'Ya Like Your Eggs in the Morning<br/>
-Nat King Cole: L.O.V.E.<br/>
-Michael Bublé: You've Got A Friend In Me<br/>
-</P>
-</DIV>
+
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
@@ -159,6 +145,21 @@ Shakin' Stevens: Merry Xmas Everyone<br/>
 </P>
 </DIV>
 
+ 
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<tr><td><a href="photos.html"><img class="boxImage" src="photos/andybgoode0004-thumb.jpg" alt="Crooning"></a></td>
+<td><DIV class="boxHeading">CROONER / SWING HITS</DIV></td></tr>
+</TABLE>
+<P class='boxInfoArea'>
+Frank Sinatra: Fly Me To The Moon; Cheek To Cheek; Come Fly With Me; You Make Me Feel So Young<br/>
+Bobby Darin: Mack the Knife; Beyond the Sea; Things<br/>
+Dean Martin: Memories Are Made Of This, How D'Ya Like Your Eggs in the Morning<br/>
+Nat King Cole: L.O.V.E.<br/>
+Michael Bublé: You've Got A Friend In Me<br/>
+</P>
+</DIV>
+
 </div>
 </div>
 
@@ -176,7 +177,7 @@ Shakin' Stevens: Merry Xmas Everyone<br/>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.0</li>
+<li>website: v2.1.1</li>
 </ul>
 </div>
 </div>
