--- a/testimonials.html
+++ b/testimonials.html
@@ -41,33 +41,6 @@
 <STYLE>
   /*max-height: 1000000em;  Chrome for Android */
   /*-moz-text-size-adjust: none;  Firefox Mobile */
-
-/*
-.boxPanel {
-	max-width: 400px;
-	margin: 5px;
-	display: inline-block;
-	vertical-align: top;
-	border: 1px solid #000000;
-	border-collapse: collapse;
-}
-.boxHeading {
-	font-size: 15px;
-	font-weight: bold;
-}
-.boxHeadingArea {
-	width:100%;
-	padding: 5px;
-}
-.boxInfoArea {
-	padding: 5px;
-}
-.boxImage {
-	width:150px;
-	height:auto;
-}
-*/
-
 </STYLE>
  
 <script>
@@ -86,6 +59,7 @@
 
 <div class="menu">
 <a href="index.html">Home</a>
+<a href="news.html">News</a>
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a>
 <a href="music.html#videos">Videos</a>
@@ -196,7 +170,7 @@ If you have any comments, please do contact me.<br/>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.0</li>
+<li>website: v2.1.1</li>
 </ul>
 </div>
 </div>
