--- a/music.html
+++ b/music.html
@@ -51,6 +51,7 @@
 
 <div class="menu">
 <a href="index.html">Home</a>
+<a href="news.html">News</a>
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a>
 <a href="music.html#videos">Videos</a>
@@ -134,7 +135,7 @@ Again a song from 'Back to the Future'. This time it's a slow love song.<br/>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.0</li>
+<li>website: v2.1.1</li>
 </ul>
 </div>
 </div>
