Minor text tweak

--- a/news.html
+++ b/news.html
@@ -91,7 +91,7 @@ Snippets of many of my songs can be seen in my <a href="music.html#videos">'Summ
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0012-thumb.jpg" alt="Andy B Goode"></a></td>
 <td><DIV class="boxHeading">SPECIAL OFFERS</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -119,7 +119,7 @@ Xmas Party: I currently have space for some more Christmas gigs.... so book earl
 </TABLE>
 <P class='boxInfoArea'>
 Saturday 15th October 2016 - 11am<br/>
-<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a> (Outside the lovely 'Curly Magpie' vintage shop)<br/>
+<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a> (Outside the lovely 'Curly Magpie' vintage shop).<br/>
 A Food Festival in Swadlincote. 'Andy B Goode' will be performing at 11am.<br/>
 Prepare yourself for Energetic 1950s Rock n Roll and tasty food from all over the world. It's gonna be great.<br/>
 </P>
@@ -154,8 +154,8 @@ Birthday Parties: I have done a few birthday parties over the summer, which were
 <td><DIV class="boxHeading">FOOD GUSTO FOOD FAIR</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-Sunday 25th September 2016<br/>
-<a href="http://www.foodgusto.com/tamworth-festival/">Food Gusto Fayre</a> (Tamworth Castle, Pleasure Grounds)<br/>
+September 2016<br/>
+<a href="http://www.foodgusto.com/tamworth-festival/">Food Gusto Fayre</a> (Tamworth Castle, Pleasure Grounds).<br/>
 A Food Festival in Tamworth. I performed with '<a href="https://www.facebook.com/TheJaysVintage">The Jays</a>' multiple times (11:30am, 1pm and 2:30pm) during the day.<br/>
 What a lovely sunny day it was so the beautiful 1940s Andrews Sisters style Vintage Harmonies and Energetic 1950s Rock n Roll really added to the upbeat atmosphere. The food was so really varied and most tasty. So many spicy flavours. One for next years diary... I need some of those amazing meat pies and samosas.<br/>
 </P>
@@ -179,7 +179,7 @@ Warwickshire and Antique Fayre (July): This was a great local vintage fayre in P
 <td><DIV class="boxHeading">NORTON JUXTA TWYCROSS SUMMER VILLAGE FETE</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-Norton Juxta Twycross Summer Village Fete (June): This included: Live music from Andy B Goode (beside the swimming pool), barbecue, cream teas, coconut shy, skittles competition, vintage steam engine, delicious home made ice cream, stalls and the annual dog show.<br/>
+Norton Juxta Twycross Summer Village Fete (June): I provided live music beside the swimming pool as people had a cream tea. This included: barbecue, cream teas, coconut shy, skittles competition, vintage steam engine, delicious home made ice cream, stalls and the annual dog show.<br/>
 I performed "Teenager in Love" live on the top local radio station TCR FM (<a href="http://www.tcrfm.co.uk">www.tcrfm.co.uk</a>).<br/>
 </P>
 </DIV>
