--- a/news.html
+++ b/news.html
@@ -96,7 +96,7 @@ Snippets of many of my songs can be seen in my <a href="music.html#videos">'Summ
 </TABLE>
 <P class='boxInfoArea'>
 Special Offer: Discounted gig pricing is currently available for 2016.<br/>
-Free Gigs: This year I am giving a few free gigs to worthy causes (Hospices, Charities, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.<br/>
+Free Gigs: This year I am giving a few free gigs to worthy causes (Hospices, Charities, etc) so inquire soon if you represent a organisation that may enjoy Vintage Rock n Roll and Crooning.<br/>
 </P>
 </DIV>
 
@@ -191,7 +191,7 @@ I performed "Teenager in Love" live on the top local radio station TCR FM (<a hr
 <td><DIV class="boxHeading">DOSTHILL CHURCH VINTAGE FETE</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-St. Pauls Dosthill Summer Vintage Fete 2016: This was a classic British summer Fete in Dosthill at the pretty Church. Loads of stalls, barbeque and yummy cakes were available. Many friends came and I sang (avoiding the light showers). People euthusiastically joined in on some songs.<br/>
+St. Pauls Dosthill Summer Vintage Fete 2016: This was a classic British summer Fete in Dosthill at the pretty Church. Loads of stalls, barbeque and yummy cakes were available. Many friends came and I sang (avoiding the light showers). People joined in on some songs.<br/>
 </P>
 </DIV>
 
