--- a/news.html
+++ b/news.html
@@ -156,7 +156,7 @@ Birthday Parties: I have done a few birthday parties over the summer, which were
 <P class='boxInfoArea'>
 September 2016<br/>
 <a href="http://www.foodgusto.com/tamworth-festival/">Food Gusto Fayre</a> (Tamworth Castle, Pleasure Grounds).<br/>
-A Food Festival in Tamworth. I performed with '<a href="https://www.facebook.com/TheJaysVintage">The Jays</a>' multiple times (11:30am, 1pm and 2:30pm) during the day.<br/>
+A Food Festival in Tamworth. I performed with '<a href="https://www.facebook.com/TheJaysVintage">The Jays</a>' multiple times during the day.<br/>
 What a lovely sunny day it was so the beautiful 1940s Andrews Sisters style Vintage Harmonies and Energetic 1950s Rock n Roll really added to the upbeat atmosphere. The food was so really varied and most tasty. So many spicy flavours. One for next years diary... I need some of those amazing meat pies and samosas.<br/>
 </P>
 </DIV>
